2006-11-06  Tanaka Akira <akr at fsij.org>
	* tdiary/hikidoc.rb, tdiary/wiki_style.rb: support here document in wiki
	style plugin syntax.
 
2006-09-13 Shun-ichi TAHARA  <jado at flowernet.gr.jp> 
	* style/etdiary/etdiary_style.rb: fix bug for mobile mode.
 
2006-09-13 Masahiro Sakai  <sakai at tom.sfc.keio.ac.jp> 
	* style/rd/rd_style.rb: unescapeHTML for parameters of plugins.
 
2006-09-05 TADA Tadashi <sho@spc.gr.jp>
	* skel/i.*.rhtml: add navigation link to bottom of pages.

2006-08-16  Kazuhiko  <kazuhiko@fdiary.net>
	* tdiary/wiki_style.rb (append): revise detection of sections.

2006-08-09  Kazuhiko  <kazuhiko@fdiary.net>
	* tdiary/wiki_style.rb: revise to output correct HTML with the
	makerss.rb plugin.

2006-08-05  Kazuhiko  <kazuhiko@fdiary.net>
	* tdiary/hikidoc.rb: sync with hikidoc rev.38.
	  support nested modifier (reported by MoonWolf)
	  support relative inline URL and fix parse_table

2006-07-23 TADA Tadashi <sho@spc.gr.jp>
	* skel/mail.rtxt: ENV['REMOTE_ADDR'] -> @cgi.remote_addr, and move it to
	bottom of the mail body.

2006-07-21 SHIBATA Hiroshi <h-sbt@nifty.com>
	* tdiary/filter/spam.rb: fix namespace ResolvError.

2006-07-21  Kazuhiko  <kazuhiko@fdiary.net>
	* skel/mail.rtxt: output ENV['REMOTE_ADDR'].
	* tdiary/filter/default.rb: untaint referer file names for mod_ruby.

2006-07-19 SHIBATA Hiroshi <h-sbt@nifty.com>
	* tdiary/filter/spam.rb: add timeout to black_domain.

2006-07-19 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/filter/spam.rb: recognize URI only http, https, ftp and mailto.
	* tdiary/filter/spam.rb: max_rate means percentage.

2006-07-10 TADA Tadashi <sho@spc.gr.jp>
	* plugin/ja/10spamfilter.rb: modify messages of preference page more.
	* theme/conf.css: hide div.footer, and enlarge submit button.
	* skel/conf.rhtml: add some classes.

2006-07-08 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/filter/default.rb: TSUKKOMI filtered by 'POST' command exactly.

2006-07-05 TADA Tadashi <sho@spc.gr.jp>