@@ -1,3 +1,6 @@
+2006-09-05 TADA Tadashi <sho@spc.gr.jp>
+	* tdiary.rb: add 'SoftBank' to mobile user agent.
+
 2006-11-06  Tanaka Akira <akr at fsij.org>
 	* tdiary/hikidoc.rb, tdiary/wiki_style.rb: support here document in wiki
 	style plugin syntax.
